--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "ipfs": "node ipfs.js"
+    "ipfs": "node ipfs.js",
+    "ipns": "node ipns.js"
   },
   "devDependencies": {
     "chalk": "^4.1.2",
